--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -1,16 +1,16 @@
 # Command Line Basics & Assembly Prep
 
-This week, we mostly touched on basics of shell (bash) scripting, common commands, and for loops.  To have a sense of what we were working with, we also prepped assemblies for four publicly-available S. aureus genomes.
+This week, we mostly touched on basics of shell (bash) scripting, common commands, and for loops.  To have a sense of what we were working with, we also prepped assemblies for four publicly-available *S. aureus* genomes.
 
 ---
 
-## **S. aureus** genome prep
+## *S. aureus* genome prep
 
 To have a better sense of the genomes that we have, we:
 
 - Downloaded reads from NCBI [fasterq-dump](https://rnnh.github.io/bioinfo-notebook/docs/fasterq-dump.html)
 - Ran trimomatic [trimmomatic](http://www.usadellab.org/cms/?page=trimmomatic)
-- Performed **de novo** assembly with [SPAdes](https://github.com/ablab/spades)
+- Performed *de novo* assembly with [SPAdes](https://github.com/ablab/spades)
 
 ### Download reads
 
