--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -39,3 +39,55 @@ We can then concatenate the 1/2 reads for each library into one sample read file
 
 for line in `cat $IDlist`; do sample=$(echo $line | cut -d, -f1); ID=$(echo $line | cut -d, -f2); echo sample is $sample    accession is $ID; cat ${sample}/${ID}_1.fastq >> ${sample}/${sample}_1.fastq; cat ${sample}/${ID}_2.fastq >> ${sample}/${sample}_2.fastq; done
 ```
+
+### Trim reads
+
+Reads can be trimmed of adaptors, minimum quality, and other parameters with trimmomatic.
+
+- if trimmomatic was installed with conda, you may need to specify the path of illumina adaptor sequences, which are also on github:
+
+```console
+# download trimmomatic repository
+git clone https://github.com/timflutre/trimmomatic
+
+# adapters are then found in trimmomatic/adapters
+adapter_path=
+
+# add this directory to your path so they are easy to locat (optional)
+export PATH="$PATH:${adapter_path}"
+```
+
+- trimmomatic can then be run:
+
+``` console
+# set values for variables in generalized code
+IDlist=/home/mwoodwo/prj/Berryhill/99.lists/IDlist.txt
+indir=/home/mwoodwo/prj/Berryhill/00.raw
+outdir=/home/mwoodwo/prj/Berryhill/01.trimmomatic
+
+# with comma-delimited ID file SAMPLE,SRR_ACC
+for line in `cat $IDlist`; do ID=$(echo $line | cut -d, -f1); echo starting $ID ...; R1=${indir}/${ID}/${ID}_1.fastq; R2=${indir}/${ID}/${ID}_2.fastq; trimmomatic PE -threads 10 -phred33 -summary ${outdir}/summary_files/${ID}_summary.txt $R1 $R2 ${outdir}/${ID}_P1.fastq ${outdir}/${ID}_U1.fastq ${outdir}/${ID}_P2.fastq ${outdir}/${ID}_U2.fastq ILLUMINACLIP:TruSeq3-PE.fa:2:30:10:2:keepBothReads LEADING:3 TRAILING:3 MINLEN:36; echo $ID seems complete ...; echo ''; done
+```
+
+- unpaired reads can then be concatenated:
+
+``` console
+for line in `cat $IDlist`; do ID=$(echo $line | cut -d, -f1); echo starting $ID ...; cat ${outdir}/${ID}_U1.fastq ${outdir}/${ID}_U2.fastq > ${outdir}/${ID}_U.fastq; echo $ID appears complete ...; echo ''; done
+```
+
+### Assemble reads
+
+SPAdes is one of the most commonly used de novo assemblers for isolate genomes and metagenomes.
+
+- define variables:
+``` console
+IDlist=/home/mwoodwo/prj/Berryhill/99.lists/IDlist.txt    # update to just include samples once
+indir=/home/mwoodwo/prj/Berryhill/01.trimmomatic
+outdir=/home/mwoodwo/prj/Berryhill/02.spades
+args='--isolate -t 10 -m 32'
+```
+
+- run SPAdes:
+``` console
+for ID in `cat $IDlist`; do echo starting $ID ...; spades.py $args -1 ${indir}/${ID}_P1.fastq -2 ${indir}/${ID}_P2.fastq -s ${indir}/${ID}_U.fastq -o ${outdir}/${ID}; echo $ID complete ...; echo ''; done
+```
