--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -91,3 +91,39 @@ args='--isolate -t 10 -m 32'
 ``` console
 for ID in `cat $IDlist`; do echo starting $ID ...; spades.py $args -1 ${indir}/${ID}_P1.fastq -2 ${indir}/${ID}_P2.fastq -s ${indir}/${ID}_U.fastq -o ${outdir}/${ID}; echo $ID complete ...; echo ''; done
 ```
+
+### Check Assembly
+
+Quast is a tool that can check assembly quality.
+
+- define variables:
+``` console
+indir=/home/mwoodwo/prj/Berryhill/02.spades
+outdir=/home/mwoodwo/prj/Berryhill/03.quast
+IDlist=/home/mwoodwo/prj/Berryhill/99.lists/IDlist.txt
+```
+
+- run quast:
+``` console
+# loop for quast
+for ID in `cat $IDlist`; do echo starting $ID ...; quast.py -o ${outdir}/${ID} -t 10 --glimmer ${indir}/${ID}/scaffolds.fasta ; echo $ID complete ...; echo ''; done
+
+# run quast for all at once
+quast.py -o ${outdir}/${ID} -t 10 --glimmer ${indir}/NRS225/scaffolds.fasta ${indir}/NRS111/scaffolds.fasta ${indir}/NRS242/scaffolds.fasta ${indir}/NRS112/scaffolds.fasta
+```
+
+### Test SKESA
+
+See if [SKESA](https://github.com/ncbi/SKESA) produces higher quality assemblies (by N50 statistic).
+
+- define variables:
+``` console
+indir=/home/mwoodwo/prj/Berryhill/01.trimmomatic
+outdir=/home/mwoodwo/prj/Berryhill/04.skesa
+IDlist=/home/mwoodwo/prj/Berryhill/99.lists/IDlist.txt
+```
+
+- run SKESA:
+``` console
+skesa --cores 10 --reads ${indir}/${ID}_P1.fastq,${indir}/${ID}_P2.fastq --contigs_out ${outdir}/${ID}_contigs.fasta
+```
