--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -7,13 +7,86 @@ This week, we mostly touched on basics of shell (bash) scripting, common command
 ## Unix Shell Computing
 (Adapted from [Software Carpentry](https://swcarpentry.github.io/shell-novice/))
 
+Shell syntax is:
+- case sensitive
+- flexible to absolute or relative paths
+- can often be auto-completed with tab
+- 
+
 commands
 ``` console
 ls
 pwd
-cd
 /
-~
+*
+?
+.
+..
+clear
+man
+--help
+cd
+cd ..
+cd -
+cd ~
+mkdir
+rm
 ```
 
----
+### General command syntax
+
+`ls` is the **command**, with **option** `-l` and an **argument** `/`.
+
+### Naming files and directories
+
+- Spaces aren't allowed
+- Common to use `CamelHumpLettering`, `Underscore_delimited_names`, or `period.delimited.names`
+- Extensions don't have special meaning in Unix
+
+### Editing files in command line
+
+``` console
+mkdir 99.lists
+cd 99.lists
+nano 22.03.10-SRA_IDs.txt
+```
+
+Nano commands
+- `Ctrl + o`: save
+- `Ctrl + x`: quit
+- `Ctrl + x`: line number
+
+Other file-manipulation commands
+``` console
+touch
+mv
+cp
+rename
+rm -i
+cat
+echo
+>
+>>
+less
+more
+head
+tail
+history
+wc
+|
+chmod
+ln
+which
+```
+
+### Managing jobs
+
+``` console
+free
+top
+ps
+jobs
+kill
+&
+fg
+```
