--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -90,3 +90,16 @@ kill
 &
 fg
 ```
+---
+
+## Package Management
+
+Conda (and it's newer faster version Mamba) is one of the most common package management tools.
+
+- [Install miniconda](https://docs.conda.io/en/latest/miniconda.html)
+- [Install mamba](https://github.com/mamba-org/mamba)
+
+Conda commands
+- `conda create --name environment`: create an environment
+- `conda activate environment`: activate an environment
+- `conda install -c channel package`: install a package
