--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -1,6 +1,8 @@
 # Command Line Basics
 
-This week, we mostly touched on basics of shell (bash) scripting, common commands, and for loops.  To have a sense of what we were working with, we also prepped assemblies for four publicly-available *S. aureus* genomes.
+Week 1 goals are to get comfortable logging in to the server, working with shell commands, with optional goals of learning conda environments and for loops.
+
+To have a sense of what we were working with, we also prepped assemblies for four publicly-available *S. aureus* genomes.
 
 ---
 
