--- a/pages/22.03.10.md
+++ b/pages/22.03.10.md
@@ -105,3 +105,17 @@ Conda commands
 - `conda create --name environment`: create an environment
 - `conda activate environment`: activate an environment
 - `conda install -c channel package`: install a package
+
+---
+
+## For loops
+
+Powerful tool to repeat a set of commands over a list.
+
+Basic syntax:
+``` console
+for thing in list_of_things
+do
+  operation_using $thing  #indentation isn't required, just aids human readibility
+done
+```
