--- a/pages/22.03.17.md
+++ b/pages/22.03.17.md
@@ -9,12 +9,12 @@ Week 2 goals are to develop an intuition for what should be in sequence files (F
 The most common file format of sequence files are FASTQ or FASTA. This format can be abbreviated as a number of different equivalent suffices (e.g. fq, fastq, fa, fna, etc)
 
 **FASTQ** files: contain four file lines per read.
-1. @${READ ID}
-2. Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)
-3. +${READ ID}
-4. Quality (AAAA1CFFFACFGEGE3BF3BF3DGG...)
+1. `@${READ ID}`
+2. `Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)`
+3. `+${READ ID}`
+4. `Quality (AAAA1CFFFACFGEGE3BF3BF3DGG...)`
 
 **FASTA** files: contain two file lines per read.
-1. >${READ ID}
-2. Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)
+1. `>${READ ID}`
+2. `Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)`
 
