--- a/pages/22.03.17.md
+++ b/pages/22.03.17.md
@@ -10,11 +10,47 @@ The most common file format of sequence files are FASTQ or FASTA. This format ca
 
 **FASTQ** files: contain four file lines per read.
 1. `@${READ ID}`
-2. `Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)`
+2. `TTTTGTTTTTCTTCTCATTATTATTT...`
 3. `+${READ ID}`
-4. `Quality (AAAA1CFFFACFGEGE3BF3BF3DGG...)`
+4. `AAAA1CFFFACFGEGE3BF3BF3DGG...`
 
 **FASTA** files: contain two file lines per read.
 1. `>${READ ID}`
-2. `Sequence (TTTTGTTTTTCTTCTCATTATTATTT...)`
+2. `TTTTGTTTTTCTTCTCATTATTATTT...`
 
+
+## Basic Scripting & Pipeline Commands
+
+``` console
+# commands
+\     # concatenates several lines of commands in the shell to be executed as single command
+;     # allows execution of multiple commands on one line (e.g. command 1; command 2; command 3
+|     # use the output of command to the left as input for command to the right
+&&    # AND operator (e.g. mkdir abc && cd abc, cd blast/db && ls)
+!     # NOT operator (e.g. rm !(*fasta)
+()    # precedence to order of operations (command1 && command2) || (command3 && command4)
+cut   # tool to split strings
+```
+
+## Importance of Text Editors
+
+- Word processing programs like MS Word add lots of data to encode styles etc but increase file size and introduce unintended text errors.
+- Simple editors like textedit, notepad, sublime, etc. are better suited for coding and many have useful features tailored to multiple languages.
+
+## Install tmux
+
+Working on the server for longer jobs can be challenging. One option is to run the jobs in the background with & command. Another option is to use the tool [tmux](https://linuxize.com/post/getting-started-with-tmux/).
+
+tmux has a learning curve to it but can be useful for being able to run longer jobs without needing to maintain an open terminal window on VPN.
+
+## For loops
+
+**General Format:**
+```console
+for thing in list_of_things
+do
+    operation_using $thing    # Indentation within the loop is not required, but aids legibility
+done
+```
+
+> When the shell sees the keyword for, it knows to repeat a command (or group of commands) once for each item in a list. Each time the loop runs (called an iteration), an item in the list is assigned in sequence to the variable, and the commands inside the loop are executed, before moving on to the next item in the list. Inside the loop, we call for the variable’s value by putting $ in front of it. The $ tells the shell interpreter to treat the variable as a variable name and substitute its value in its place, rather than treat it as text or an external command.
