--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -1,23 +1,12 @@
-# Files & For Loops
+# Assemblies & Transfers
 
-Week 2 goals are to develop an intuition for what should be in sequence files (FASTQ/FASTA), working with for loops, use of tmux, and assembly.
+Week 3 goals are to evaluate quality of assemblies, predict proteins, annotate proteins, modest pangenomes. Time permitting, we will also review some methods for file transfer to a remote compute node.
 
 ---
 
-## Sequence Files
+## Assembly Background
 
-The most common file format of sequence files are FASTQ or FASTA. This format can be abbreviated as a number of different equivalent suffices (e.g. fq, fastq, fa, fna, etc)
-
-**FASTQ** files: contain four file lines per read.
-1. `@${READ ID}`
-2. `TTTTGTTTTTCTTCTCATTATTATTT...`
-3. `+${READ ID}`
-4. `AAAA1CFFFACFGEGE3BF3BF3DGG...`
-
-**FASTA** files: contain two file lines per read.
-1. `>${READ ID}`
-2. `TTTTGTTTTTCTTCTCATTATTATTT...`
-
+[Touch on some basic points](AssemblyBackground.pptx) about assembly, read mapping, and evaluating their quality.
 
 ## Basic Scripting & Pipeline Commands
 
