--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -8,59 +8,86 @@ Week 3 goals are to evaluate quality of assemblies, predict proteins, annotate p
 
 [Touch on some basic points](AssemblyBackground.pptx) about assembly, read mapping, and evaluating their quality.
 
-## Basic Scripting & Pipeline Commands
+## Evaluate Assembly Quality
+
+- Install QUAST with conda
+- Run QUAST with loop
 
 ``` console
-# commands
-\     # concatenates several lines of commands in the shell to be executed as single command
-;     # allows execution of multiple commands on one line (e.g. command 1; command 2; command 3
-|     # use the output of command to the left as input for command to the right
-&&    # AND operator (e.g. mkdir abc && cd abc, cd blast/db && ls)
-!     # NOT operator (e.g. rm !(*fasta)
-()    # precedence to order of operations (command1 && command2) || (command3 && command4)
-cut   # tool to split strings
+quast.py -o ${outdir} -t 8 --glimmer ${indir}/contigs.fasta ${indir}/contigs.fasta ${indir}/contigs.fasta ${indir}/contigs.fasta 
 ```
 
-## Importance of Text Editors
+## Predict Proteins
 
-- Word processing programs like MS Word add lots of data to encode styles etc but increase file size and introduce unintended text errors.
-- Simple editors like textedit, notepad, sublime, etc. are better suited for coding and many have useful features tailored to multiple languages.
+- Install Prodigal with conda
+- Run Prodigal with loop
 
-## Install tmux
+``` console
+IDlist=/home/mwoodwo/prj/Berryhill/99.lists/IDlist.txt
+indir=/home/mwoodwo/prj/Berryhill/02.spades
+outdir=/home/mwoodwo/prj/Berryhill/03.prodigal
+args='-p single'       # for single genome gene prediction
 
-Working on the server for longer jobs can be challenging. One option is to run the jobs in the background with & command. Another option is to use the tool [tmux](https://linuxize.com/post/getting-started-with-tmux/).
+for ID in `cat $IDlist`; do echo starting $ID ...; prodigal -a ${outdir}/${ID}.faa -d ${outdir}/${ID}.fna -f gff -i ${scaffold} -o ${outdir}/${ID}.gff $args; echo $ID complete ...; echo ''; done
+```
 
-tmux has a learning curve to it but can be useful for being able to run longer jobs without needing to maintain an open terminal window on VPN.
+## Antimicrobial resistance genes analyses (AMRFinder)
+[AMRFinderPlus](https://github.com/ncbi/amr) is an NCBI developed/maintained tool that has a robust method of detecting antimicrobial resistance (AMR) genes with blast queries and hidden markov model searches. We have also [written some additional filtering and summarizing scripts](https://github.com/michaelwoodworth/AMRFinder_scripts) that may streamline some analyses with the output of AMRFinder. **We used AMRFinderPlus v3.10.18.**
 
-## For loops
-
-### General Format:
+- Define tool / step variables
 ```console
-for thing in list_of_things
-do
-    operation_using $thing    # Indentation within the loop is not required, but aids legibility
-done
+indir=${path_to_prodigal_output}
+outdir=${path_to_amrfinder_output}
+protein=${indir}/${ID}.faa
 ```
 
-*From SoftwareCarpentry:*
-> When the shell sees the keyword for, it knows to repeat a command (or group of commands) once for each item in a list. Each time the loop runs (called an iteration), an item in the list is assigned in sequence to the variable, and the commands inside the loop are executed, before moving on to the next item in the list. Inside the loop, we call for the variable’s value by putting $ in front of it. The $ tells the shell interpreter to treat the variable as a variable name and substitute its value in its place, rather than treat it as text or an external command.
-
-- write a for loop that echoes all numbers from 0 to 9
-- write output of a command to a new file in a loop
-- addend output of a command to a file in a loop
-
-### Nested Loops
-
+- Run AMRFinder
 ```console
-for thing in list_of_things
-do
-    for sub_thing in another_list_of_things
-        operation_using $sub_thing    # Indentation within the loop is not required, but aids legibility
-    done
-done
+amrfinder -p ${protein} --plus -o ${outdir}/${ID}_amrfinder.tsv
 ```
 
+## Annotation (prokka)
+[prokka](https://github.com/tseemann/prokka) is a rapid prokaryotic genome annotation tool. It accepts contigs (produced in earlier assembly step by SPAdes), predicts proteins, and annotates predicted genes. The output can be used directly as input for roary for comparative genomic analyses. **We used Prokka v1.14.6.**
 
-## Genome Assembly
+- Define tool / step variables
+```console
+indir=${path_to_contigs}
+outdir=${path_to_prokka_output}
+contigs=${indir}/${ID}_contigs.fasta
+```
 
-See [public genome assembly](PublicGenomeAssembly.md)
+- Run Prokka
+```console
+prokka --outdir ${outdir}/${ID} --prefix $ID $contigs
+```
+
+## Clustered Gene Analysis (Roary)
+[Roary](https://github.com/sanger-pathogens/Roary) is a fairly simple tool for clustered gene comparisons across prokaryote genomes. The simplest way to run Roary is to copy/link gff files of interest from Prokka in a single directory and running Roary from that directory. Unfortunately, it is no longer being supported by the developer. **We used Roary v3.13.0.**
+
+- Define tool / step variables
+```console
+indir=${path_to_gff_files_from_prokka}
+args="-p 8 -o ${ID}_clustered_proteins -e -v"
+```
+
+- Run Roary
+```console
+roary $args ${indir}/*gff
+```
+
+## Average Nucleotide Identity (ANI) Tests (FastANI)
+[FastANI](https://github.com/ParBLiSS/FastANI) is a fast and simple tool to calculate average nucleotide identity for complete or draft genomes. **We used v1.32.**
+
+It's best to review the documentation on the FastANI github site, but we created a list of all genomes and ran all vs all comparisons as below.
+
+- Define tool / step variables
+```console
+indir=${path_to_isolate_genome_contigs}
+outdir=${path_to_write_output}
+genome_list=${path_to_text_file_list_of_genomes}
+```
+
+- Run FastANI
+```console
+fastANI --ql $genome_list --rl $genome_list -o ${outdir}/output.txt
+```
