--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -43,7 +43,7 @@ protein=${indir}/${ID}.faa
 
 - Run AMRFinder
 ```console
-amrfinder -p ${protein} --plus -o ${outdir}/${ID}_amrfinder.tsv
+for ID in `cat $IDlist`; do echo starting $ID ...; amrfinder -p ${protein} --plus -o ${outdir}/${ID}_amrfinder.tsv; echo $ID complete ...; echo ''; done
 ```
 
 ## Annotation (prokka)
@@ -58,7 +58,7 @@ contigs=${indir}/${ID}_contigs.fasta
 
 - Run Prokka
 ```console
-prokka --outdir ${outdir}/${ID} --prefix $ID $contigs
+for ID in `cat $IDlist`; do echo starting $ID ...; prokka --outdir ${outdir}/${ID} --prefix $ID $contigs; echo $ID complete ...; echo ''; done
 ```
 
 ## Clustered Gene Analysis (Roary)
@@ -72,7 +72,7 @@ args="-p 8 -o ${ID}_clustered_proteins -e -v"
 
 - Run Roary
 ```console
-roary $args ${indir}/*gff
+for ID in `cat $IDlist`; do echo starting $ID ...; roary $args ${indir}/*gff; echo $ID complete ...; echo ''; done
 ```
 
 ## Average Nucleotide Identity (ANI) Tests (FastANI)
@@ -89,5 +89,5 @@ genome_list=${path_to_text_file_list_of_genomes}
 
 - Run FastANI
 ```console
-fastANI --ql $genome_list --rl $genome_list -o ${outdir}/output.txt
+for ID in `cat $IDlist`; do echo starting $ID ...; fastANI --ql $genome_list --rl $genome_list -o ${outdir}/output.txt; echo $ID complete ...; echo ''; done
 ```
