--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -91,3 +91,22 @@ genome_list=${path_to_text_file_list_of_genomes}
 ```console
 for ID in `cat $IDlist`; do echo starting $ID ...; fastANI --ql $genome_list --rl $genome_list -o ${outdir}/output.txt; echo $ID complete ...; echo ''; done
 ```
+
+## File Transfer
+
+FTP (file transfer protocol) is an unsecured file transfer standard that is occasionally used in public datasets but would avoid this for security reasons.
+
+The easiest way to transfer files with ssh (which encrypts tansfer) is with a desktop client like [Cyberduck](https://cyberduck.io/download/).
+
+Also possible to transfer via the command line, which is necessary in some situations. The most common tools for this are rsync and scp. In addition to transfering files, rsync can check dates & file sizes to evaluate if files need updating. This saves time/bandwidth by not overwriting files that don't need updating. We'll use some rsync examples.
+
+``` console
+# Basic syntax
+rsync options source destination
+
+# Local to Remote
+rsync -avzh ${local_dir} ${username}@170.140.234.60:${remote_dir}/
+
+# Remote to Local
+rsync -avzh ${username}@170.140.234.60:${remote_dir}/ ${local_dir}
+```
