--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -108,5 +108,5 @@ rsync options source destination
 rsync -avzh ${local_dir} ${username}@170.140.234.60:${remote_dir}/
 
 # Remote to Local
-rsync -avzh ${username}@170.140.234.60:${remote_dir}/ ${local_dir}
+rsync -avzh ${username}@170.140.234.60:${remote_dir} ${local_dir}
 ```
