--- a/pages/22.03.31.md
+++ b/pages/22.03.31.md
@@ -12,3 +12,26 @@ It's not the most intuitive interface in the world but has workflows that perfor
 
 It also is fairly well-documented with tutorials and videos for how to use its features and provides boilerplate text for the methods used that can be included in your manuscript.
 
+We can download reads from your genomes:
+
+| Sample | Accession   |
+| ------ | ---------   |
+| NRS225 | SRR2910954  |
+| ------ | ---------   |
+| NRS225 | SRR2124643  |
+| ------ | ---------   |
+| NRS111 | SRR10512470 |
+| ------ | ---------   |
+| NRS111 | SRR2910921  |
+| ------ | ---------   |
+| NRS111 | SRR2124587  |
+| ------ | ---------   |
+| NRS242 | SRR2124656  |
+| ------ | ---------   |
+| NRS242 | SRR2910965  |
+| ------ | ---------   |
+| NRS112 | SRR10512469 |
+| ------ | ---------   |
+| NRS112 | SRR2910922  |
+| ------ | ---------   |
+| NRS112 | SRR2124588  |
