--- a/pages/22.03.31.md
+++ b/pages/22.03.31.md
@@ -12,7 +12,7 @@ It's not the most intuitive interface in the world but has workflows that perfor
 
 It also is fairly well-documented with tutorials and videos for how to use its features and provides boilerplate text for the methods used that can be included in your manuscript.
 
-We can download reads from your genomes:
+- We can run the 'Comprehensive Genome Analysis Service' on your genomes:
 
 | Sample | Accession   |
 | ------ | ---------   |
@@ -26,3 +26,15 @@ We can download reads from your genomes:
 | NRS112 | SRR10512469 |
 | NRS112 | SRR2910922  |
 | NRS112 | SRR2124588  |
+
+Other services to check out on PATRIC:
+- Similar genome finder service
+- Phylogenetic Tree
+- Genome alignment
+
+## Bactopia
+
+[Bactopia](https://bactopia.github.io) development was led by Robert Petit, who was at Emory but moved on to Montana. He continues to maintain the tool with regular updates. All software it uses has conda packages, which are handled by [Nextflow](https://www.nextflow.io) pipeline/workflow scripts under the hood.
+
+- Install Bactopia with the [quick start](https://bactopia.github.io/quick-start/).
+- 
