--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -43,7 +43,7 @@ protein=${indir}/${ID}.faa
 
 - Run AMRFinder
 ```console
-for ID in `cat $IDlist`; do echo starting $ID ...; amrfinder -p ${protein} --plus -o ${outdir}/${ID}_amrfinder.tsv; echo $ID complete ...; echo ''; done
+for ID in `cat $IDlist`; do echo starting $ID ...; protein=${indir}/${ID}.faa; amrfinder -p ${protein} --plus -o ${outdir}/${ID}_amrfinder.tsv; echo $ID complete ...; echo ''; done
 ```
 
 ## Annotation (prokka)
