--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -58,7 +58,7 @@ contigs=${indir}/${ID}_contigs.fasta
 
 - Run Prokka
 ```console
-for ID in `cat $IDlist`; do echo starting $ID ...; prokka --outdir ${outdir}/${ID} --prefix $ID $contigs; echo $ID complete ...; echo ''; done
+for ID in `cat $IDlist`; do echo starting $ID ...; contigs=${indir}/${ID}_contigs.fasta; prokka --outdir ${outdir}/${ID} --prefix $ID $contigs; echo $ID complete ...; echo ''; done
 ```
 
 ## Clustered Gene Analysis (Roary)
