--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -53,12 +53,12 @@ for ID in `cat $IDlist`; do echo starting $ID ...; protein=${indir}/${ID}.faa; a
 ```console
 indir=${path_to_contigs}
 outdir=${path_to_prokka_output}
-contigs=${indir}/${ID}_contigs.fasta
+contigs=${indir}/${ID}/contigs.fasta
 ```
 
 - Run Prokka
 ```console
-for ID in `cat $IDlist`; do echo starting $ID ...; contigs=${indir}/${ID}_contigs.fasta; prokka --outdir ${outdir}/${ID} --prefix $ID $contigs; echo $ID complete ...; echo ''; done
+for ID in `cat $IDlist`; do echo starting $ID ...; contigs=${indir}/${ID}/contigs.fasta; prokka --outdir ${outdir}/${ID} --prefix $ID $contigs; echo $ID complete ...; echo ''; done
 ```
 
 ## Clustered Gene Analysis (Roary)
