--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -28,7 +28,7 @@ indir=/home/mwoodwo/prj/Berryhill/02.spades
 outdir=/home/mwoodwo/prj/Berryhill/03.prodigal
 args='-p single'       # for single genome gene prediction
 
-# for de novo assembled genomes
+# for de novo assembled genomes from SPAdes
 for ID in `cat $IDlist`; do echo starting $ID ...; scaffold=${indir}/${ID}/scaffolds.fasta; prodigal -a ${outdir}/${ID}.faa -d ${outdir}/${ID}.fna -f gff -i ${scaffold} -o ${outdir}/${ID}.gff $args; echo $ID complete ...; echo ''; done
 
 # for complete assembled genomes (e.g. from MiGS)
