--- a/pages/22.03.24.md
+++ b/pages/22.03.24.md
@@ -96,6 +96,27 @@ genome_list=${path_to_text_file_list_of_genomes}
 for ID in `cat $IDlist`; do echo starting $ID ...; fastANI --ql $genome_list --rl $genome_list -o ${outdir}/output.txt; echo $ID complete ...; echo ''; done
 ```
 
+## SerotypeFinder
+
+Install serotypefinder with conda, change into serotypefinder directory, define variables and run loop.
+
+- Define tool / step variables
+```console
+IDlist=${path_to_IDlist.txt}
+indir=${path_to_isolate_genome_contigs}
+outdir=${path_to_write_output}
+```
+
+- Run subdirectory loop:
+``` console
+for ID in `cat $IDlist`; do echo starting $ID ...; mkdir ${ID}; echo $ID complete …; done
+```
+
+- Run SerotypeFinder
+``` console
+for ID in `cat $IDlist`; do echo starting $ID ...; serotypefinder -i ${indir}/${ID}.fasta -o ${outdir}/${ID}; echo $ID complete ...; echo ‘’; done
+```
+
 ## File Transfer
 
 FTP (file transfer protocol) is an unsecured file transfer standard that is occasionally used in public datasets but would avoid this for security reasons.
